# ocentra-games

./: .env  .env.example  .gitignore  .prettierignore  FIREBASE_QUICK_START.md  FIREBASE_SETUP.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  README.md  eslint.config.js  index.html  logs.db  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
Rust/SolanaContract/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
Rust/SolanaContract/src/: error.rs  lib.rs  validation.rs
Rust/SolanaContract/src/instructions/: ad_reward.rs  ai_credit_consume.rs  ai_credit_purchase.rs  anchor_batch.rs  anchor_match_record.rs  calculate_scores.rs  close_match_account.rs  commit_hand.rs  create_match.rs  daily_login.rs  end_match.rs  flag_dispute.rs  game_payment.rs  join_match.rs  mod.rs  pro_subscription.rs  register_game.rs  register_signer.rs  resolve_dispute.rs  slash_validator.rs  start_match.rs  submit_batch_moves.rs  submit_move.rs  update_game.rs
Rust/SolanaContract/src/state/: batch_anchor.rs  config_account.rs  dispute.rs  game_config.rs  game_leaderboard.rs  game_registry.rs  match_state.rs  mod.rs  move_state.rs  signer_registry.rs  user_account.rs  validator_reputation.rs
Rust/SolanaContract/tests/: claim-game.ts
docs/: SOLANA_MULTIPLAYER_FLOW.md  SOLANA_WALLET_SETUP.md  multiplayer.md
examples/: ai_vs_ai_match.json  chain_of_thought_example.json  human_vs_human_match.json
scripts/: dev.bat  dev.js  test-firebase.cjs  (+1 more)
src/: App.css  (+4 more)
(+289 files in other folders)
